// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receipts.add > functionality > empty receipt 1`] = `
{
  "added": {
    "receiptItems": {
      "id:77ce22c5-ef8a-48af-b7dc-70443373f2e6": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "77ce22c5-ef8a-48af-b7dc-70443373f2e6",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "77ce22c5-ef8a-48af-b7dc-70443373f2e6",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "receipts": {
      "id:77ce22c5-ef8a-48af-b7dc-70443373f2e6": {
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "MVR",
        "id": "77ce22c5-ef8a-48af-b7dc-70443373f2e6",
        "issued": "2020-01-01",
        "name": "vapulus suppellex omnis",
        "ownerAccountId": "765cb46c-a8f5-4cea-ad28-51a2d6531b82",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with consumers 1`] = `
{
  "added": {
    "receiptItemConsumers": {
      "itemId:2d659cae-9a91-4188-b5ac-4de41909364a|userId:505df457-b0e0-4b8f-8089-4bfc2fe05ed9": {
        "createdAt": "2020-01-01 00:00:00+00",
        "itemId": "2d659cae-9a91-4188-b5ac-4de41909364a",
        "part": "2.00",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "505df457-b0e0-4b8f-8089-4bfc2fe05ed9",
      },
      "itemId:2d659cae-9a91-4188-b5ac-4de41909364a|userId:6799e4f0-3836-4c37-9d29-6e77c519f401": {
        "createdAt": "2020-01-01 00:00:00+00",
        "itemId": "2d659cae-9a91-4188-b5ac-4de41909364a",
        "part": "1.00",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "6799e4f0-3836-4c37-9d29-6e77c519f401",
      },
    },
    "receiptItemPayers": {
      "itemId:2d659cae-9a91-4188-b5ac-4de41909364a|userId:505df457-b0e0-4b8f-8089-4bfc2fe05ed9": {
        "createdAt": "2020-01-01 00:00:00+00",
        "itemId": "2d659cae-9a91-4188-b5ac-4de41909364a",
        "part": "3.00",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "505df457-b0e0-4b8f-8089-4bfc2fe05ed9",
      },
      "itemId:2d659cae-9a91-4188-b5ac-4de41909364a|userId:6799e4f0-3836-4c37-9d29-6e77c519f401": {
        "createdAt": "2020-01-01 00:00:00+00",
        "itemId": "2d659cae-9a91-4188-b5ac-4de41909364a",
        "part": "2.00",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "6799e4f0-3836-4c37-9d29-6e77c519f401",
      },
    },
    "receiptItems": {
      "id:2d659cae-9a91-4188-b5ac-4de41909364a": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "2d659cae-9a91-4188-b5ac-4de41909364a",
        "name": "quas arca adnuo",
        "price": "131.3200",
        "quantity": "93.0000",
        "receiptId": "80c204c8-f18a-4fe6-a069-f950e73f6752",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:80c204c8-f18a-4fe6-a069-f950e73f6752": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "80c204c8-f18a-4fe6-a069-f950e73f6752",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "80c204c8-f18a-4fe6-a069-f950e73f6752",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:8c54cb27-3a72-456b-89bc-4c3a6a2cea59": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "8c54cb27-3a72-456b-89bc-4c3a6a2cea59",
        "name": "attero tempus contra",
        "price": "416.0400",
        "quantity": "84.0000",
        "receiptId": "80c204c8-f18a-4fe6-a069-f950e73f6752",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "receiptParticipants": {
      "receiptId:80c204c8-f18a-4fe6-a069-f950e73f6752|userId:505df457-b0e0-4b8f-8089-4bfc2fe05ed9": {
        "createdAt": "2020-01-01 00:00:00+00",
        "receiptId": "80c204c8-f18a-4fe6-a069-f950e73f6752",
        "role": "owner",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "505df457-b0e0-4b8f-8089-4bfc2fe05ed9",
      },
      "receiptId:80c204c8-f18a-4fe6-a069-f950e73f6752|userId:6799e4f0-3836-4c37-9d29-6e77c519f401": {
        "createdAt": "2020-01-01 00:00:00+00",
        "receiptId": "80c204c8-f18a-4fe6-a069-f950e73f6752",
        "role": "editor",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "6799e4f0-3836-4c37-9d29-6e77c519f401",
      },
    },
    "receipts": {
      "id:80c204c8-f18a-4fe6-a069-f950e73f6752": {
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "MGA",
        "id": "80c204c8-f18a-4fe6-a069-f950e73f6752",
        "issued": "2020-01-01",
        "name": "degenero sollicito dignissimos",
        "ownerAccountId": "505df457-b0e0-4b8f-8089-4bfc2fe05ed9",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with items 1`] = `
{
  "added": {
    "receiptItems": {
      "id:8d1da110-db7e-4565-b1ed-6fda17cc0052": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "8d1da110-db7e-4565-b1ed-6fda17cc0052",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "8d1da110-db7e-4565-b1ed-6fda17cc0052",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:9541d729-10c0-4b3a-8a74-3c4fa2c125d9": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "9541d729-10c0-4b3a-8a74-3c4fa2c125d9",
        "name": "apostolus possimus stella",
        "price": "145.7200",
        "quantity": "53.0000",
        "receiptId": "8d1da110-db7e-4565-b1ed-6fda17cc0052",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
      "id:ea036ecc-abde-441a-8059-8830b10dd5b7": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "ea036ecc-abde-441a-8059-8830b10dd5b7",
        "name": "annus consequuntur iure",
        "price": "404.3100",
        "quantity": "87.0000",
        "receiptId": "8d1da110-db7e-4565-b1ed-6fda17cc0052",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "receipts": {
      "id:8d1da110-db7e-4565-b1ed-6fda17cc0052": {
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "WST",
        "id": "8d1da110-db7e-4565-b1ed-6fda17cc0052",
        "issued": "2020-01-01",
        "name": "auxilium praesentium quidem",
        "ownerAccountId": "2818c424-c82b-400b-b550-d25614946d49",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with participants 1`] = `
{
  "added": {
    "receiptItems": {
      "id:8dd65dc8-e9fe-400a-8f49-d80a41448177": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "8dd65dc8-e9fe-400a-8f49-d80a41448177",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "8dd65dc8-e9fe-400a-8f49-d80a41448177",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "receiptParticipants": {
      "receiptId:8dd65dc8-e9fe-400a-8f49-d80a41448177|userId:380d581a-3a71-432d-96ed-290d284bbffa": {
        "createdAt": "2020-01-01 00:00:00+00",
        "receiptId": "8dd65dc8-e9fe-400a-8f49-d80a41448177",
        "role": "owner",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "380d581a-3a71-432d-96ed-290d284bbffa",
      },
      "receiptId:8dd65dc8-e9fe-400a-8f49-d80a41448177|userId:93b6e565-0c29-47c3-aa85-6b7836da664e": {
        "createdAt": "2020-01-01 00:00:00+00",
        "receiptId": "8dd65dc8-e9fe-400a-8f49-d80a41448177",
        "role": "editor",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "93b6e565-0c29-47c3-aa85-6b7836da664e",
      },
    },
    "receipts": {
      "id:8dd65dc8-e9fe-400a-8f49-d80a41448177": {
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "LAK",
        "id": "8dd65dc8-e9fe-400a-8f49-d80a41448177",
        "issued": "2020-01-01",
        "name": "virga comminor odit",
        "ownerAccountId": "380d581a-3a71-432d-96ed-290d284bbffa",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with payers 1`] = `
{
  "added": {
    "receiptItemConsumers": {
      "itemId:226d5e72-176f-4b9f-b93f-282e7bb931e2|userId:75f6916a-9c3e-428b-9af0-e8d28c9894dd": {
        "createdAt": "2020-01-01 00:00:00+00",
        "itemId": "226d5e72-176f-4b9f-b93f-282e7bb931e2",
        "part": "1.00",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "75f6916a-9c3e-428b-9af0-e8d28c9894dd",
      },
      "itemId:226d5e72-176f-4b9f-b93f-282e7bb931e2|userId:dbad4f55-f087-4591-9264-fbc355413624": {
        "createdAt": "2020-01-01 00:00:00+00",
        "itemId": "226d5e72-176f-4b9f-b93f-282e7bb931e2",
        "part": "22.00",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "dbad4f55-f087-4591-9264-fbc355413624",
      },
    },
    "receiptItems": {
      "id:226d5e72-176f-4b9f-b93f-282e7bb931e2": {
        "createdAt": "2020-01-01 00:00:00+00",
        "id": "226d5e72-176f-4b9f-b93f-282e7bb931e2",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "226d5e72-176f-4b9f-b93f-282e7bb931e2",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
    "receiptParticipants": {
      "receiptId:226d5e72-176f-4b9f-b93f-282e7bb931e2|userId:75f6916a-9c3e-428b-9af0-e8d28c9894dd": {
        "createdAt": "2020-01-01 00:00:00+00",
        "receiptId": "226d5e72-176f-4b9f-b93f-282e7bb931e2",
        "role": "editor",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "75f6916a-9c3e-428b-9af0-e8d28c9894dd",
      },
      "receiptId:226d5e72-176f-4b9f-b93f-282e7bb931e2|userId:dbad4f55-f087-4591-9264-fbc355413624": {
        "createdAt": "2020-01-01 00:00:00+00",
        "receiptId": "226d5e72-176f-4b9f-b93f-282e7bb931e2",
        "role": "owner",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "dbad4f55-f087-4591-9264-fbc355413624",
      },
    },
    "receipts": {
      "id:226d5e72-176f-4b9f-b93f-282e7bb931e2": {
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "CDF",
        "id": "226d5e72-176f-4b9f-b93f-282e7bb931e2",
        "issued": "2020-01-01",
        "name": "sumptus adipiscor velit",
        "ownerAccountId": "dbad4f55-f087-4591-9264-fbc355413624",
        "updatedAt": "2020-01-01 00:00:00+00",
      },
    },
  },
}
`;

exports[`receipts.add > input verification > inner fails > participants errors 1`] = `{}`;

exports[`receipts.add > input verification > inner fails > parts fail 1`] = `{}`;

exports[`receipts.add > input verification > inner fails > payers errors 1`] = `{}`;
